// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, currentColor);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk thinking-core claude-asterisk--active"
          data-brand="thinking-core"
          data-brand-geometry="atom"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          data-thinking-core="active"
          data-thinking-tone="default"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, currentColor);"
          viewBox="0 0 24 24"
          width="16"
        >
          <g>
            <g
              class="thinking-core__orbit thinking-core__orbit--a"
              transform="rotate(-90 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--a"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="0s"
                    dur="2.6s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <g
              class="thinking-core__orbit thinking-core__orbit--b"
              transform="rotate(30 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--b"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="-1.1s"
                    dur="3.1s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <g
              class="thinking-core__orbit thinking-core__orbit--c"
              transform="rotate(150 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--c"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="-2.3s"
                    dur="3.6s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <circle
              class="thinking-core__core"
              cx="12"
              cy="12"
              fill="currentColor"
              r="2.6"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, currentColor);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk thinking-core claude-asterisk--active"
          data-brand="thinking-core"
          data-brand-geometry="atom"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          data-thinking-core="active"
          data-thinking-tone="default"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, currentColor);"
          viewBox="0 0 24 24"
          width="16"
        >
          <g>
            <g
              class="thinking-core__orbit thinking-core__orbit--a"
              transform="rotate(-90 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--a"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="0s"
                    dur="2.6s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <g
              class="thinking-core__orbit thinking-core__orbit--b"
              transform="rotate(30 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--b"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="-1.1s"
                    dur="3.1s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <g
              class="thinking-core__orbit thinking-core__orbit--c"
              transform="rotate(150 12 12)"
            >
              <g
                class="thinking-core__electron thinking-core__electron--c"
              >
                <circle
                  class="thinking-core__electron-live"
                  fill="currentColor"
                  r="1.7"
                >
                  <animatemotion
                    begin="-2.3s"
                    dur="3.6s"
                    path="M22 12A10 3.65 0 1 1 2 12A10 3.65 0 1 1 22 12"
                    repeatCount="indefinite"
                  />
                </circle>
                <circle
                  class="thinking-core__electron-still"
                  cx="22"
                  cy="12"
                  fill="currentColor"
                  r="1.7"
                />
              </g>
            </g>
            <circle
              class="thinking-core__core"
              cx="12"
              cy="12"
              fill="currentColor"
              r="2.6"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
